# cashews

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  Readme.md  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: lint.yml  main.yml  pre-commit.yml  tests.yml
cashews/: __init__.py  _cache_condition.py  _picklers.py  _settings.py  _typing.py  backend_settings.py  cache.py  cache_condition.py  check_speed.py  commands.py  compresors.py  disable_control.py  exceptions.py  formatter.py  helpers.py  key.py  key_context.py  picklers.py  serialize.py  ttl.py  typing.py  utils.py  validation.py  wrapper.py
cashews/backends/: aredis.py  client_side.py  diskcache.py  index.py  interface.py  memory.py  redis.py  transaction.py
cashews/backends/redis/: __init__.py  backend.py  client.py  client_side.py  compat.py
cashews/cache_utils/: __init__.py  circuit_braker.py  defaults.py  early.py  fail.py  locked.py  rate.py  simple.py
cashews/contrib/: __init__.py  _starlette.py  fastapi.py  prometheus.py
cashews/decorators/: __init__.py  auto.py  bloom.py  circuit_braker.py  circuit_breaker.py  locked.py  perf.py  rate.py  rate_slice.py  rate_slide.py
cashews/decorators/cache/: _exception.py  defaults.py  early.py  fail.py  hit.py  iterator.py  simple.py  soft.py
cashews/utils/: __init__.py  _bitarray.py  _bitarray_lib.py  bitarray.py  object_size.py  split_hash.py
cashews/wrapper/: __init__.py  auto_init.py  backend_settings.py  callback.py  commands.py  contextual.py  decorators.py  disable_control.py  tags.py  time_condition.py  transaction.py  wrapper.py
examples/: _profile.py  _profile_aiocache.py  app.py  bench_app.py  blooms.py  bug.py  cache_decorators.py  condition.py  fastapi_app.py  invalidation_by_tags.py  keys.py  klass.py  more_decorators.py  prefix_setup.py  simple.py  starlette_etag.py
perf/: bench.py  locustfile.py  req.in  simple.py
tests/: conftest.py  test_add_prefix.py  test_backend.py  test_backend_commands.py  test_backends.py  test_blooms.py  test_bugs.py  test_cache.py  test_cache_exception.py  test_callback.py  test_circuit_breaker.py  test_client_side_cache.py  test_disable_control.py  test_helpers.py  test_index_backend.py  test_invalidate.py  test_iterators_cache.py  test_key.py  test_lock_decorator.py  test_middleware.py  test_pickle_serializer.py  test_rate_limit.py  test_redis_down.py  test_serialize.py  test_settings_url.py  test_tags_feature.py  test_transaction.py  test_utils.py  test_wrapper.py
tests/test_intergations/: __init__.py  test_aiohttp.py  test_fastapi.py  test_prom.py
