[metadata]
name = cashews
version = 7.4.0
url = https://github.com/Krukov/cashews/
author = Dmitry Kryukov
author_email = glebov.ru@gmail.com
description = cache tools with async power
keywords = cache aio async multicache aiocache
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
python_requires = >=3.9
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    tests
    tests.*

[options.package_data]
cashews = py.typed

[options.extras_require]
redis =
    redis >= 4.3.1,!=5.0.1
diskcache =
    diskcache >= 5.0.0
speedup =
    bitarray < 4.0.0
    xxhash < 4.0.0
    hiredis
dill =
    dill
lint =
    mypy >= 1.5.0
    types-redis
tests =
    pytest==8.3.3
    pytest-asyncio==0.24.0
    pytest-cov==6.0.0
    pytest-randomly==3.16.0
    pytest-rerunfailures==15.0
    hypothesis==6.123.4
