[metadata]
name = cashews
version = 7.4.4
url = https://github.com/Krukov/cashews/
author = Dmitry Kryukov
author_email = glebov.ru@gmail.com
description = cache tools with async power
keywords = cache aio async multicache aiocache
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
python_requires = >=3.10
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    tests*

[options.package_data]
cashews = py.typed

[options.extras_require]
redis =
    redis >= 4.3.1,!=5.0.1
diskcache =
    diskcache >= 5.0.0
speedup =
    bitarray < 4.0.0
    xxhash < 4.0.0
    hiredis
dill =
    dill
lint =
    mypy >= 1.5.0
    types-redis
tests =
    pytest==9.0.2
    pytest-asyncio==1.3.0
    pytest-cov==7.0.0
    pytest-randomly==4.0.1
    pytest-rerunfailures==16.1
    hypothesis==6.150.1
